Fix JUnit test case failures